issue #4: Changed visibility for all pages but top artists, artists will be the default page.

--- a/client/scss/music.scss
+++ b/client/scss/music.scss
@@ -20,6 +20,17 @@
 }
 
 
+/*Player Pages */
+
+#search-page {
+  visibility: hidden;
+}
+
+#playlists-page {
+  visibility: hidden;
+}
+
+
 
 
 
